--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "deploy": "nodemon server.js"
+    "deploy": "node server.js",
+    "start": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
